fix z index on buttons as not working on mobile - as react boostrap - css fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,8 @@ footer {
   height: 165px;
 }
 
+
+.btn {
+  z-index: 9999;
+  color: rgb(0, 0, 0) !important; 
+}
